All the decisions to take out Itorkanak and Kaprastiak gangsters

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -193,24 +193,39 @@
  ATL_SP_neutrality_DEF:0 "Empire of Atlantis"
  
  #######tooltips
- ATL_attack_itorkanak_tooltip:0 "Starts the event chain to destroy the Itorkanak \n"
- ATL_attack_kaprastiak_tooltip:0 "Starts the event chain to destroy the Kaprastiak \n"
- ATL_attack_all_tooltip:0 "We are going to fight both criminal organizations \n"
- ATL_naitastarak_tooltip:0 "Allows decisions to suppress dissident thought \n"
+ ATL_attack_itorkanak_tooltip:0 "§gStarts the event chain to destroy the Itorkanak \n§"
+ ATL_attack_kaprastiak_tooltip:0 "§gStarts the event chain to destroy the Kaprastiak \n§"
+ ATL_attack_all_tooltip:0 "§gWe are going to fight both criminal organizations \n§"
+ ATL_naitastarak_tooltip:0 "§gAllows decisions to suppress dissident thought \n§"
  ATL_panatlantean_railroad:0 "§gAdd maximum infrastructure in all mainland states \n§"
  ATL_industrial_espionage:0 "§gAllows industrial espionage decisions \n§"
  ATL_air_reforms:0 "§gAllows decisions to remove the §yOutdated Air Force§  modifier \n§"
  ATL_forts:0 "§gAdds 3 forts and 3 coastal forts to every core urban province in Atlantis \n§"
+ ATL_UK_trade:0 "§gAllows decisions to divert British resource production \n§"
  
  #######ideas
  ATL_kaprastiak_at_war:0 "War on the Kaprastiak"
+ ATL_kaprastiak_at_war_2:0 "War on the Kaprastiak"
+ ATL_kaprastiak_at_war_3:0 "War on the Kaprastiak"
+ ATL_kaprastiak_at_war_4:0 "War on the Kaprastiak"
  ATL_itorkanak_at_war:0 "War on the Itorkanak"
+ ATL_itorkanak_at_war_2:0 "War on the Itorkanak"
+ ATL_itorkanak_at_war_3:0 "War on the Itorkanak"
+ ATL_itorkanak_at_war_4:0 "War on the Itorkanak"
  ATL_trading_empire:0 "Historical Trading Empire"
+ ATL_trading_empire_2:0 "Historical Trading Empire"
+ ATL_trading_empire_3:0 "Historical Trading Empire"
  ATL_naval_power:0 "Naval Tradition"
  ATL_useless_air_force:0 "Outdated Air Force"
+ ATL_useless_air_force_2:0 "Outdated Air Force"
+ ATL_useless_air_force_3:0 "Outdated Air Force"
+ ATL_useless_air_force_4:0 "Outdated Air Force"
  ATL_gostudis_in_government:0 "Gostudis in Government"
  ATL_kaprastiak_in_government:0 "Alliance with the Kaprastiak"
  ATL_itorkanak_in_government:0 "Alliance with the Itorkanak"
+ ATL_itorkanak_in_government_sic:0 "Alliance with the Itorkanak"
+ ATL_itorkanak_in_government_sic_sieg:0 "Alliance with the Itorkanak"
+ ATL_itorkanak_in_government_sic_sieg_ring:0 "Alliance with the Itorkanak"
  ATL_sicilians_enemies:0 "War on the Sicilians"
  ATL_ringvereine_enemies:0 "War on the Ringvereine"
  ATL_building_research_center:0 "Building Research Center"
@@ -219,33 +234,101 @@
  ATL_black_daggers_idea:0 "Black Daggers in Power"
  ATL_BD_camps:0 "Black Daggers Camps"
  ATL_kaixanarak_shock:0 "Populace in Shock"
+ ATL_kaixanarak_shock_2:0 "Populace in Shock"
+ ATL_kaixanarak_shock_3:0 "Populace in Shock"
  ATL_tumurzek:0 "Tumurzek Maneaters"
  ATL_BD_education:0 "Black Dagger Indoctrination"
  ATL_hastugudak_education:0 "History Revision"
  ATL_hexanchials_in_government:0 "Hexanchial Influence"
  ATL_kaiturn_media:0 "Kaiturn Media"
+ ATL_kaiturn_media_uncontested:0 "Kaiturn Media"
  ATL_substituting_politicians_hastugudak:0 "Monarchist Political Reform"
  ATL_restored_empire:0 "Restored Empire"
  ATL_karistigs_in_government:0 "Karistigs in Government"
+ ATL_karistigs_bailed_out:0 "Karistigs in Government"
+ ATL_karistigs_dominant:0 "Karistigs in Government"
+ ATL_bailout:0 "Bailing Out the Karistigs"
  ATL_karistig_pissed_off:0 "Karistigs Opposing the Government"
+ ATL_karistig_really_pissed_off:0 "Karistigs Opposing the Government"
  ATL_UBG_idea:0 "United Bankers Guild"
+ ATL_UBG_dominant:0 "United Bankers Guild"
+ ATL_UBG_dominant_2:0 "United Bankers Guild"
  ATL_karistig_sabotaging_government:0 "Karistigs Sabotaging Government"
  ATL_funding_industries:0 "Subsidizing Industries"
+ ATL_americans_funding_industries:0 "Subsidizing Industries"
  ATL_leasing_african_ports:0 "Leasing African Ports"
  ATL_atlantic_domination:0 "Atlantic Domination Efforts"
  ATL_german_influence:0 "German Influence"
  ATL_extremists:0 "Extremists in Government"
+ ATL_extremists_red:0 "Extremists in Government"
+ ATL_extremists_green:0 "Extremists in Government"
  ATL_socialist_tradition:0 "Socialist in Atlantean Tradition"
  ATL_business_with_rothschilds:0 "Rothschild Influence"
+ ATL_business_with_rothschilds_2:0 "Rothschild Influence"
  ATL_green_brigade_recruitment:0 "The Young Brigade"
  ATL_dismantling_UBG:0 "Dismantling the UBG"
+ ATL_aggressive_search_itork_idea:0 "Aggressive operations in the port cities"
+ ATL_balanced_search_itork_idea:0 "Operations in the port cities"
+ ATL_aggressive_search_kapra_idea:0 "Aggressive operations in the downtown"
+ ATL_balanced_search_kapra_idea:0 "Operations in the downtown"
+ 
+ #######decisions
+ ATL_airforce_gap:0 "Fixing the Air Force"
+ ATL_outdated_air_force_fix:0 "Close the Air Force Gap"
+ ATL_gang_warfare:0 "Gang Warfare"
+ conduct_raid_kaprastiak:0 "Conduct a Raid on the Kaprastiak Hub"
+ conduct_raid_itorkanak:0 "Conduct a Raid on the Itorkanak Hub"
+ fix_air_force:0 "Execute Air Exercises"
+ ATL_itorkanak_flag:0 "Open Conflict against the Itorkanak"
+ ATL_kaprastiak_flag:0 "Open Conflict against the Kaprastiak"
  
  #######techs
  ATL_parasite_fighter:0 "Parasite Fighters"
+ ATL_parasite_fighter_desc:0 "Parasite Fighters are quul xdxd"
  ATL_light_bomber:0 "Light Bombers"
- ATL_VLFP:0 "Very Large Floating Platform"
+ ATL_light_bomber_desc:0 "The Light Bombers are CAS airplanes with slightly more range and attack"
+ mothership:0 "huhueue"
+ mothership_desc:0 "sprolololo descripttsion"
+ mothership_equipment:0 "Parasite Fighter Carrier"
+ mothership_equipment_desc:0 "The Parasite Fighter Carrier is a strategic bomber that was converted to a mothership that carries two diminute fighters."
+ 
+ #######events
+ atl.1.t:0 "Search for Itorkanak Cells"
+ atl.1.d:0 "We're aware of Itorkanak activity in a certain port area, but we don't have yet their exact location, so we can't do any direct action. We must set up an operation to discover where is the area's command hub."
+ atl.1.a:0 "Set up curfews and deploy the police on the streets"
+ atl.1.b:0 "Police action in suspicious targets"
+ atl.1.c:0 "Undercover action at the harbors"
+ 
+ atl.2.t:0 "Itorkanak Cell Found"
+ atl.2.d:0 "The police found an Itorkanak cell. They are responsible for the gang's activities in their area, and violent police action is expected to take place."
+ atl.2.a:0 "Let's take them down!"
+ 
+ atl.3.t:0 "New Itorkanak Cell Formed"
+ atl.3.d:0 "The rumors of a new Itorkanak cell operating in a coastal city were true. There is an increase in the criminal activity around the area as the police is currently avoiding direct conflict."
+ atl.3.a:0 "The war goes on..."
+ 
+ atl.4.t:0 "Itorkanak Attack!"
+ atl.4.d:0 "The war on the Itorkanak has been raging for long. Last night they set up bombs on government's assets. While the death toll was minimal, the damage was extensive, and they can only start working again after extensive repairs."
+ atl.4.a:0 "Send the firefighters!"
  
  
+ atl.5.t:0 "Search for Kaprastiak Cells"
+ atl.5.d:0 "The Kaprastiak hide deep inside the political parties and worker's unions. They enjoy some popular support. If we wish to uproot them, we should think of the options at hand, as well as their consequences."
+ atl.5.a:0 "Interrogate political leaders and bust into factories"
+ atl.5.b:0 "Set up police outposts in the hot areas"
+ atl.5.c:0 "Infiltrate unions and poor areas"
+ 
+ atl.6.t:0 "Kaprastiak Cell Found"
+ atl.6.d:0 "After an extensive police operation in the downtown, one of the Kaprastiak's command centers has been uncovered. Well armed and paid, the Kaprastiak henchmen are expecting a major incursion from the police on their way."
+ atl.6.a:0 "Lock and load!"
+ 
+ atl.7.t:0 "New Kaprastiak Cell Formed"
+ atl.7.d:0 "Although being actively hunted by the government, the Kaprastiak managed to set up a new operations center in a poor district. They were fast in gaining the locals' trust and are recruiting men for their operations."
+ atl.7.a:0 "Get the Police Ready!"
+ 
+ atl.8.t:0 "Kaprastiak Attack"
+ atl.8.d:0 "The Kaprastiak targeted an industrial area and bombed several key installations. Nobody died, and the workers aren't willing to give any information concerning the aggressors."
+ atl.8.a:0 "The Kaprastiak's hold over the workers is costing us too much"
  
  
  
