--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -271,6 +271,7 @@
  ATL_balanced_search_itork_idea:0 "Operations in the port cities"
  ATL_aggressive_search_kapra_idea:0 "Aggressive operations in the downtown"
  ATL_balanced_search_kapra_idea:0 "Operations in the downtown"
+ ATL_overtax_foreign_media:0 "Overtaxed foreign media"
  
  #######decisions
  ATL_airforce_gap:0 "Fixing the Air Force"
