Atlantis = cancer 100% mega

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -165,8 +165,8 @@
  ATL_heavy_fighters_desc:0 "The Atlantean Air Force is still regarded as a joke inside Atlantis. Plagued by accidents, inadequate outdated equipment and incompetent pilots, we have a lot of work to do until our birds are up to the standards we set for our ships."
  ATL_amphibious:0 "Prepare the Invasion"
  ATL_amphibious_desc:0 "The enemies now hide behind their coastal fortifications, and our navy circles them like vultures. The initiative is ours, and we will break through their shores with our amphibious vehicles and open room for our armored battalions!"
- ATL_armor:0 "Breaking the Lines"
- ATL_armor_desc:0 "Once the beaches are secured, we must have an equally powerful land force to give continuity to the attacks. Our heavy tanks will make short work of the enemy defenses."
+ ATL_armor_focus:0 "Breaking the Lines"
+ ATL_armor_focus_desc:0 "Once the beaches are secured, we must have an equally powerful land force to give continuity to the attacks. Our heavy tanks will make short work of the enemy defenses."
  ATL_VLFP:0 "Militarize the VLFPs"
  ATL_VLFP_desc:0 "The VLFPs, Very Large Floating Platforms, are the development of traditional large scale maritime cultivation floating structures that have been the way of life for centuries in the calm sea of the Kolpo Bay. Our most modern VLFPs are in the open sea and can withstand all weather. We can turn them into literal floating airfields with some adaptation and use them as powerful supports for naval invasions."
  ATL_light_bombers:0 "Light Bombers"
@@ -234,8 +234,8 @@
  ATL_black_daggers_idea:0 "Black Daggers in Power"
  ATL_BD_camps:0 "Black Daggers Camps"
  ATL_kaixanarak_shock:0 "Populace in Shock"
- ATL_kaixanarak_shock_2:0 "Populace in Shock"
- ATL_kaixanarak_shock_3:0 "Populace in Shock"
+ ATL_kaixanarak_shock_2:0 "Populace Afraid"
+ ATL_kaixanarak_shock_3:0 "Populace Unconfortable"
  ATL_tumurzek:0 "Tumurzek Maneaters"
  ATL_BD_education:0 "Black Dagger Indoctrination"
  ATL_hastugudak_education:0 "History Revision"
@@ -272,16 +272,27 @@
  ATL_aggressive_search_kapra_idea:0 "Aggressive operations in the downtown"
  ATL_balanced_search_kapra_idea:0 "Operations in the downtown"
  ATL_overtax_foreign_media:0 "Overtaxed foreign media"
+ ATL_diverting_to:0 "Diverting resources from Great Britain"
+ ATL_diverting_from:0 "Diverting resources to Atlantis"
+ ATL_diverting_supplies_to:0 "Diverting supplies from Great Britain"
+ ATL_diverting_supplies_from:0 "Diverting supplies to Atlantis"
  
  #######decisions
+ ATL_espionage:0 "Espionage"
  ATL_airforce_gap:0 "Fixing the Air Force"
  ATL_outdated_air_force_fix:0 "Close the Air Force Gap"
  ATL_gang_warfare:0 "Gang Warfare"
  conduct_raid_kaprastiak:0 "Conduct a Raid on the Kaprastiak Hub"
  conduct_raid_itorkanak:0 "Conduct a Raid on the Itorkanak Hub"
+ conduct_raid_sicilians:0 "Attack the Sicilian Leadership"
+ conduct_raid_ringvereine:0 "Wipe out the Ringvereine"
  fix_air_force:0 "Execute Air Exercises"
  ATL_itorkanak_flag:0 "Open Conflict against the Itorkanak"
  ATL_kaprastiak_flag:0 "Open Conflict against the Kaprastiak"
+ naitastarak_shock_fix:0 "Hunt Critics of the Government"
+ industrial_espionage_decision:0 "Industrial Espionage on the United States"
+ divert_resources:0 "Divert Resources from the British"
+ divert_supplies:0 "Divert Supplies from the British"
  
  #######techs
  ATL_parasite_fighter:0 "Parasite Fighters"
@@ -331,6 +342,12 @@
  atl.8.d:0 "The Kaprastiak targeted an industrial area and bombed several key installations. Nobody died, and the workers aren't willing to give any information concerning the aggressors."
  atl.8.a:0 "The Kaprastiak's hold over the workers is costing us too much"
  
+ atl.9.t:0 "Spying on American Industries and Command Structures"
+ atl.9.d:0 "We managed to infiltrate Atlantean spies inside the American industries and their command centers. Now we can choose what kind of documents to look for."
+ atl.9.a:0 "Heavy machinery and electronic systems blueprints"
+ atl.9.b:0 "Their newest ship designs"
+ atl.9.c:0 "Aircraft design research"
+ atl.9.d:0 "Infantry and armor projects"
  
  
  
