--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -276,6 +276,7 @@
  ATL_diverting_from:0 "Diverting resources to Atlantis"
  ATL_diverting_supplies_to:0 "Diverting supplies from Great Britain"
  ATL_diverting_supplies_from:0 "Diverting supplies to Atlantis"
+ ATL_USA_espionage:0 "Espionage on the American Companies"
  
  #######decisions
  ATL_espionage:0 "Espionage"
