Bomber range modifier

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -277,6 +277,7 @@
  ATL_diverting_supplies_to:0 "Diverting supplies from Great Britain"
  ATL_diverting_supplies_from:0 "Diverting supplies to Atlantis"
  ATL_USA_espionage:0 "Espionage on the American Companies"
+ ATL_bomber_range:0 "Conformal Fuel Tanks"
  
  #######decisions
  ATL_espionage:0 "Espionage"
