--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -553,3 +553,7 @@
  FSM_communism_party_long:0 "Deutschemu Sozialisten"
  FSM_communism_coalition:0 "DMS-GdEA"
  FSM_communism_coalition_long:0 "Deutschemu Sozialisten-Gewerkschaft der Einheimischen Arbeiter"
+ ATL_neutrality_party:0 "Guredda Parti"
+ ATL_fascism_party:0 "Zarikgudal Parti"
+ ATL_democratic_party:0 "Lestadentiral Parti"
+ ATL_communism_party:0 "Komunistal Parti"
