Small changes to descriptions

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -305,6 +305,8 @@
  mothership_desc:0 "sprolololo descripttsion"
  mothership_equipment:0 "Parasite Fighter Carrier"
  mothership_equipment_desc:0 "The Parasite Fighter Carrier is a strategic bomber that was converted to a mothership that carries two diminute fighters."
+ ATL_VLFP_tech:0 "VLFP"
+ ATL_VLFP_tech_desc:0 "Very Large Floating Platforms are floating concrete-based structures that serve a range of purposes. Atlanteans managed to turn them into large airports that can hold a few hundred airplanes."
  
  #######events
  atl.1.t:0 "Search for Itorkanak Cells"
