atl focus updates

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -43,7 +43,7 @@
  ATL_kaiturn_desc:0 "Since the radio and television became a staple in the entertainment industry, we have become too reliant on foreign media. That's not good for the maintenance of our culture. This is why we will found our own state-sponsored media company, with the help of the Kaiturn Dynasty."
  ATL_kaiturn_2:0 "Overtax the Foreign Media"
  ATL_kaiturn_2_desc:0 "Increasing the taxes on the popular foreign media should make the transition to locally made media faster, and should also increase our income a little bit. We hope the population won't be too angry that some of their favorite shows will be gone soon."
- ATL_hastugudak:0 "Legitimate the Hastugudak Movement"
+ ATL_hastugudak:0 "Legitimize the Hastugudak Movement"
  ATL_hastugudak_desc:0 "The last remaining monarchical society, the Hastugudak, have worked behind the scenes since 1541CE to preserve the royal bloodline and to restore the Throne of Atlantis. They firmly believe that Atlantis needs her king, and while they may not be very powerful, they are numerous and dedicated. They promise glory, support, and stability in exchange for a role in government."
  ATL_hastugudak_2:0 "Rewrite the History Books"
  ATL_hastugudak_2_desc:0 "The official history of Atlantis overemphasizes the good aspects of the republic, without giving the proper credit for the advancements made during the Empire. We should rewrite the books to sway the public opinion towards a more traditional monarchist view."
