Added Thule and Frisland party names

--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -557,3 +557,12 @@
  ATL_fascism_party:0 "Zarikgudal Parti"
  ATL_democratic_party:0 "Lestadentiral Parti"
  ATL_communism_party:0 "Komunistal Parti"
+ FRI_neutrality_party:0 "Tískiflokkrinn"
+ FRI_communism_party:0 "Komminternflokkr Fríslands"
+ FRI_democratic_party:0 "Frjáls Þjóðmannflokkrinn"
+ FRI_fascism_party:0 "Tingmannflokkr"
+ THU_neutrality_party:0 "Free Atlantic Party"
+ THU_democratic_party:0 "Fiskimannaflokkurinn"
+ THU_communism_party:0 "TIP"
+ THU_communism_party_long:0 "Thule International Party"
+ THU_fascism_party:0 "Thuleman Order"
