--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -153,6 +153,8 @@
  ATL_strat_bombers_desc:0 "If we can't directly invade a country, at least we can bomb them to rubble. That's the premise of strategic bombing, and this is the safest way we can provide support for a war even from the Atlantean mainland."
  ATL_sumendia:0 "Sumendian Dockyards"
  ATL_sumendia_desc:0 "The lone volcanic island in the middle of the Kolpo bay, Sumendia has historically been famous for its numerous dockyards and for fending off the other Atlantean kingdoms with its navy. Now we need to fend off our own enemies, and we can modernize the current shipbuilding infrastructure there to further strengthen our navy."
+ ATL_sumendia_2:0 "Support Friendlies Abroad"
+ ATL_sumendia_2_desc:0 "Even if our army isn't in the best shape, we can always give material support to friendly countries at war from our booming industries at home."
  ATL_intervention:0 "Project the Atlantean Power"
  ATL_intervention_desc:0 "The best defense is a good attack. There's no value in cowering like a scared turtle inside its shell, and we will make the world know how unwise it will be to antagonize us!"
  ATL_SS:0 "Tonnage War"
@@ -278,6 +280,7 @@
  ATL_diverting_supplies_from:0 "Diverting supplies to Atlantis"
  ATL_USA_espionage:0 "Espionage on the American Companies"
  ATL_bomber_range:0 "Conformal Fuel Tanks"
+ ATL_lend_lease:0 "Support for Wars Abroad"
  
  #######decisions
  ATL_espionage:0 "Espionage"
