--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -6,9 +6,9 @@
  01_MUU_marsh_mot:0 "§gMotorized and mechanized divisions gain a bonus while fighting on marsh terrain \n§ "
  01_MUU_marsh_arm:0 "§gArmored divisions gain a bonus while fighting on marsh terrain \n§ "
  MUU_cores:0 "§gGains cores over all Muror countries \n§ "
- marsh_infantry:0 "Detachable Floaters"
- marsh_motorized:0 "Watertight Seals"
- marsh_armor:0 "River Fording"
+ MUU_marsh_infantry:0 "Marsh adapted army"
+ MUU_marsh_motorized:0 "Marsh adapted army"
+ MUU_armor_marsh:0 "Marsh adapted army"
  
  dustartajare_developed:0 "Dustartajare's Industrial Complex"
  
