--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -224,18 +224,18 @@
  MUU_bb_focus_desc:1 "Battleships and battlecruisers are floating fortresses that inspire fear in both enemy ships and the unfortunate troops that happen to be defending a beach. They are the pride of the Muror Navy."
  MUU_cv_focus:1 "Floating Airfields"
  MUU_cv_focus_desc:1 "The age of the Battleship is over. With the correct modifications, our airplanes can land in ships, allowing our air power to be projected farther than we ever imagined."
- MUU_light_fighter:1 "Homeland Defense"
- MUU_light_fighter_desc:1 "Even though our Marshes protect us against invading armies, they won't do any good against enemy aircraft. We need up-to-date light fighters to secure our airspace."
- MUU_cas:1 "Ground Pounding"
- MUU_cas_desc:1 "Our dive bombers can strike fear in anyone who dares invade our homeland!"
- MUU_nav_bomber:1 "Defense of Hadu"
- MUU_nav_bomber_desc:1 "The only thing scarier than finding a few combat ships in the sea is looking above the horizon and seeing hundreds of torpedo armed light bombers heading your way. This will safeguard our coasts more than anything in the sea."
- MUU_heavy_fighter:1 "Escort Fighters"
- MUU_heavy_fighter_desc:1 "Heavy bombers need escort for their long distance operations. We must sacrifice agility in exchange for operational range if we want to protect our heavier aircraft."
- MUU_tac_bomber:1 "Long-Range Support"
- MUU_tac_bomber_desc:1 "Nimble enough to allow for precise ground bombing and naval strikes, large enough to carry a respectable ordnance loadout and have a continental range. The most versatile of our airplanes must be modernized to maintain an edge over the enemy forces."
- MUU_strat_bomber:1 "Aparuqur Ijuaz"
- MUU_strat_bomber_desc:1 "The Fist of the Sky. An airplane so large that only a few can destroy an entire industrial zone. Our enemies will shake in fear when they know what happens to the ones who face us!"
+ MUU_light_fighter_focus:1 "Homeland Defense"
+ MUU_light_fighter_focus_desc:1 "Even though our Marshes protect us against invading armies, they won't do any good against enemy aircraft. We need up-to-date light fighters to secure our airspace."
+ MUU_cas_focus:1 "Ground Pounding"
+ MUU_cas_focus_desc:1 "Our dive bombers can strike fear in anyone who dares invade our homeland!"
+ MUU_nav_bomber_focus:1 "Defense of Hadu"
+ MUU_nav_bomber_focus_desc:1 "The only thing scarier than finding a few combat ships in the sea is looking above the horizon and seeing hundreds of torpedo armed light bombers heading your way. This will safeguard our coasts more than anything in the sea."
+ MUU_heavy_fighter_focus:1 "Escort Fighters"
+ MUU_heavy_fighter_focus_desc:1 "Heavy bombers need escort for their long distance operations. We must sacrifice agility in exchange for operational range if we want to protect our heavier aircraft."
+ MUU_tac_bomber_focus:1 "Long-Range Support"
+ MUU_tac_bomber_focus_desc:1 "Nimble enough to allow for precise ground bombing and naval strikes, large enough to carry a respectable ordnance loadout and have a continental range. The most versatile of our airplanes must be modernized to maintain an edge over the enemy forces."
+ MUU_strat_bomber_focus:1 "Aparuqur Ijuaz"
+ MUU_strat_bomber_focus_desc:1 "The Fist of the Sky. An airplane so large that only a few can destroy an entire industrial zone. Our enemies will shake in fear when they know what happens to the ones who face us!"
  MUU_experimental_airfield:1 "The Inirliq Research Airbase"
  MUU_experimental_airfield_desc:1 "Our research can go as far as our facilities can accomodate. To develop better airplanes, we need a far away military base to serve as a testing ground."
  MUU_expand_airfield:1 "Expand the Operations"
