--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -356,7 +356,13 @@
  atl.9.c:0 "Aircraft design research"
  atl.9.d:0 "Infantry and armor projects"
  
- 
+ NAME_THEME_CHIEF: "Chief Deities"
+ NAME_THEME_KNOWLEDGE: "Knowledge Deities"
+ NAME_THEME_FERTILITY: "Fertility Deities"
+ NAME_THEME_DEATH: "Death Deities"
+ NAME_THEME_SKY: "Sky Deities"
+ NAME_THEME_WIND: "Wind Deities"
+ NAME_THEME_HUNTING: "Hunting Deities"
  
  
  
