--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2511,7 +2511,7 @@
  ATL_prince_of_terror: "Troskip Lortensinatez"
  ATL_armaments_organizer: "Stimaztol Utiskaraz"
  ATL_pacific_fleet_naval_manufacturer: "Sumendia Naval Works"
- ATL_atlantic_fleet_naval_manufacturer: "Burmuinean Atlantic Yards"
+ ATL_atlantic_fleet_naval_manufacturer: "Burmiunean Atlantic Yards"
  ATL_battlefleet_designer: "Pidrialak Naval Machines"
  ATL_private_shipyards: "Orumas-Triunarka"
  ATL_light_aircraft_manufacturer: "Wright-Asorsak Aeuronautics"
