Technologies are back

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -204,6 +204,9 @@
  ATL_air_reforms:0 "§gAllows decisions to remove the §yOutdated Air Force§  modifier \n§"
  ATL_forts:0 "§gAdds 3 forts and 3 coastal forts to every core urban province in Atlantis \n§"
  ATL_UK_trade:0 "§gAllows decisions to divert British resource production \n§"
+ 01_ATL_VLFP:0 "§gVastly increases the capacity of the carriers, at the cost of speed \n§"
+ 01_ATL_light_bombers:0 "§gIncreases the range and air defense of the CAS aircraft \n§"
+ 01_ATL_parasite:0 "§gSubstantially increases the air defense of strategic bombers, at the cost of some bombing capability \n§"
  
  #######ideas
  ATL_kaprastiak_at_war:0 "War on the Kaprastiak"
@@ -298,6 +301,7 @@
  industrial_espionage_decision:0 "Industrial Espionage on the United States"
  divert_resources:0 "Divert Resources from the British"
  divert_supplies:0 "Divert Supplies from the British"
+ ATL_support_the_anti_fascist_war:0 "Support the Chinese War Efforts"
  
  #######techs
  ATL_parasite_fighter:0 "Parasite Fighters"
