--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -302,6 +302,7 @@
  divert_resources:0 "Divert Resources from the British"
  divert_supplies:0 "Divert Supplies from the British"
  ATL_support_the_anti_fascist_war:0 "Support the Chinese War Efforts"
+ ATL_support_the_anti_fascist_war_flag:0 "Atlantis Supporting China"
  
  #######techs
  ATL_parasite_fighter:0 "Parasite Fighters"
