--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -323,8 +323,8 @@
  FSM_democratic_ADJ:0 "Freistaater"
  FSM_neutrality_ADJ:0 "Freistaater"
  FSM_communism_ADJ:0 "Mu-Deutsche"
- MNU_fascism:0 "Neu-Sachsenland"
- MNU_fascism_DEF:0 "Neu-Sachsenland"
+ MNU_fascism:0 "Neu-Sachsen"
+ MNU_fascism_DEF:0 "Neu-Sachsen"
  MNU_democratic:0 "Manu Autonomous State"
  MNU_democratic_DEF:0 "The Manu Autonomous State"
  MNU_neutrality:0 "Manu"
