atl icons update

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -37,7 +37,7 @@
  ATL_kaixanarak_final_desc:0 "The educational system must be subverted to the state if we ever wish to prevent the return of the weak Atlantean republic."
  ATL_hexanchials:0 "Closer Ties with the Hexanchial Society"
  ATL_hexanchials_desc:0 "The longest lived secret society in Atlantis, the Hexanchial has been the guiding force in Atlantean politics since the first moments of the Republic. Should we continue to allow their stable, guiding hand to rule?"
- ATL_hexanchials_2:0 "Hexanchial Influence over the Industry"
+ ATL_hexanchials_2:0 "Hexanchial Influence over Industry"
  ATL_hexanchials_2_desc:0 "The Hexanchial Society has discussed Atlantis' situation and determined that we must not enmesh ourselves in the affairs of the Europeans or Americans... except to sell arms and supplies for their foolish wars. Our industries will be thankful."
  ATL_kaiturn:0 "Found the Kaiturn Media Corporation"
  ATL_kaiturn_desc:0 "Since the radio and television became a staple in the entertainment industry, we have become too reliant on foreign media. That's not good for the maintenance of our culture. This is why we will found our own state-sponsored media company, with the help of the Kaiturn Dynasty."
@@ -113,7 +113,7 @@
  ATL_befriend_sicilians_desc:0 "The Sicilian Mafia has been our faithful ally during the growth of the Itorkanak, and their fight against the Kaprastiak. They are willing to expand their operations and they promise we will profit a lot from the agreement."
  ATL_befriend_siegels:0 "Business with the Siegels"
  ATL_befriend_siegels_desc:0 "The Siegels are one of the American Jewish Mafia's most powerful families. They are our gateway to the organized crime in the United States. Together with the Italians we already work with, our grasp over the American homeland will be tighter than ever."
- ATL_befriend_ringvereine:0 "A Foothold on Germany"
+ ATL_befriend_ringvereine:0 "A Foothold in Germany"
  ATL_befriend_ringvereine_desc:0 "The Ringvereine are a group of various gangs that operate in Germany. They have been growing fast since our first deals with them, and now they are ready for the next step in our partnership: an Atlantean beachhead in Germany. Hitler's men won't like what we're doing, but we will be able to channel much of the German underworld to our benefit."
  ATL_rothschilds:0 "Invite the Rothschild Bankers"
  ATL_rothschilds_desc:0 "The Rothschilds are a powerful banking family in the United States. If we can strike a favorable deal with them, we could have access to huge sums of money for our investments, for good rates."
