localization fixes, better icon by Abbus

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1046,3 +1046,6 @@
  VICTORY_POINTS_14205:0 "Rycroft"
  VICTORY_POINTS_14223:0 "Cabo San Lucas"
  VICTORY_POINTS_7964:0 "Los Demonios"
+ VICTORY_POINTS_3712:0 "Concord"
+ VICTORY_POINTS_4445:0 "Montpelier"
+ VICTORY_POINTS_3732:0 "Augusta"
