--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -51,8 +51,8 @@
  DES_fascism_DEF:0 "Deseret"
  DES_democratic:0 "Deseret"
  DES_democratic_DEF:0 "The Republic of Deseret"
- DES_neutrality:0 "Deseret"
- DES_neutrality_DEF:0 "Deseret"
+ DES_neutrality:0 "Theodemocratic Deseret"
+ DES_neutrality_DEF:0 "Theodemocratic Deseret"
  DES_communism:0 "Western Socialist Republic"
  DES_communism_DEF:0 "The Western Socialist Republic"
  DES_fascism_ADJ:0 "Deseretan"
