ORE additions, etc

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -23,6 +23,18 @@
  ZEN_democratic_ADJ:0 "Zenagan"
  ZEN_neutrality_ADJ:1 "Zenigalese"
  ZEM_communism_ADJ:1 "Zenagan"
+ ORE_fascism:0 "Expansionist Oregon"
+ ORE_fascism_DEF:0 "Expansionist Oregon"
+ ORE_democratic:0 "Oregon Republic"
+ ORE_democratic_DEF:0 "The Republic of Oregon"
+ ORE_neutrality:0 "Oregon"
+ ORE_neutrality_DEF:0 "Oregon"
+ ORE_communism:0 "Oregonian Peoples' Republic"
+ ORE_communism_DEF:0 "The Oregonian Peoples' Republic"
+ ORE_fascism_ADJ:0 "Oregonian"
+ ORE_democratic_ADJ:0 "Oregonian"
+ ORE_neutrality_ADJ:0 "Oregonian"
+ ORE_communism_ADJ:0 "Oregonian"
  CAL_fascism:0 "Greater California"
  CAL_fascism_DEF:0 "Greater California"
  CAL_democratic:0 "California Republic"
