Atlantean Decisions + Mu's Faction

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -361,6 +361,19 @@
  atl.9.c:0 "Aircraft design research"
  atl.9.d:0 "Infantry and armor projects"
  
+ #######decisions
+ 
+ 
+ develop_akitselo_iron:0 "Develop Steel Plants in Akitselo"
+ develop_hemaritsal_iron:0 "Develop Metal Works in Hemaritsal"
+ develop_ladskamn_iron:0 "Develop Alloy Plants in Ladskamn"
+ develop_vorea_iron:0 "Develop Iron Deposits in Vorea"
+ develop_mutsarna_oil:0 "Develop Oil Refineries in Mutsarna"
+ develop_hemaritsal_chromium:0 "Develop Chromium Deposits in Hemaritsal"
+ develop_setitla_aluminium:0 "Develop Bauxite Deposits in Setitla"
+ develop_sumendia_chromium:0 "Develop Sumendian Chromium Plants"
+ develop_zenigal_chromium:0 "Develop Chromium Deposits in Zenigal"
+ 
  NAME_THEME_CHIEF: "Chief Deities"
  NAME_THEME_KNOWLEDGE: "Knowledge Deities"
  NAME_THEME_FERTILITY: "Fertility Deities"
