--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -10,6 +10,8 @@
  MUU_marsh_motorized:0 "Marsh adapted army"
  MUU_armor_marsh:0 "Marsh adapted army"
  
+ MUU_muror_alliance:0 "Pan-Muror Alliance"
+ 
  dustartajare_developed:0 "Dustartajare's Industrial Complex"
  
  MUU_MOO_fascism:0 "Ujjuqji Muror"
