--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -247,7 +247,7 @@
  
  
  ###ideas
- 
+ MUU_ussr_economic_cooperation:0 "Mu-USSR Economic Cooperation"
  
  MUU_rural_isolation:0 "Rural Population Isolated"
  MUU_rural_guerrillas:0 "Rural Communist Guerrillas"
