Tahitian Civil War now has functional events

--- a/localisation/AML_decisions_l_english.yml
+++ b/localisation/AML_decisions_l_english.yml
@@ -1,4 +1,10 @@
 ﻿l_english:
+ TAH_foreign_support:0 "Support Tahiti in their Civil War"
+ support_tahiti_dem1:0 "Support the Democratic Forces with Manpower"
+ support_tahiti_com1:0 "Support the Communist Forces with Manpower"
+ support_tahiti_dem2:0 "Support the Democratic Forces with Guns"
+ support_tahiti_com2:0 "Support the Communist Forces with Guns"
+ 
  USA_war_plan_cyan:0 "War Plan Cyan"
  USA_war_plan_cyan_desc:0 "Because of our prior shared love of democracy we have been patient and lenient with Atlantis, but they have demonstrated that they are willing to make themselves our enemies. We must swiftly eliminate them as a threat."
  USA_execute_war_plan_cyan:1 "Execute War Plan Cyan"
