some minor stuff

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1049,3 +1049,4 @@
  VICTORY_POINTS_3712:0 "Concord"
  VICTORY_POINTS_4445:0 "Montpelier"
  VICTORY_POINTS_3732:0 "Augusta"
+ VICTORY_POINTS_9697:0 "Oakland"
