--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -786,28 +786,28 @@
  STATE_785:0 "Picardy"
  STATE_786:0 "Mauritanian Desert"
  STATE_787:0 "Northern Kashmir"
- STATE_788:0 "Hanya"
- STATE_789:0 "Khyei"
- STATE_790:0 "Tyek"
- STATE_791:0 "Gensi"
+ STATE_788:0 "Kumari 1"
+ STATE_789:0 "Pantiya-Kobaulashlivi Strip"
+ STATE_790:0 "Dutch Chola"
+ STATE_791:0 "Macehualuti"
  STATE_792:0 "Dryang"
  STATE_793:0 "Nups"
  STATE_794:0 "Hanyen"
- STATE_795:0 "Suyats"
- STATE_796:0 "Yueyk"
+ STATE_795:0 "Kobaulashlivi"
+ STATE_796:0 "Pantiya 2"
  STATE_797:0 "Kruyung"
- STATE_798:0 "Kryek"
+ STATE_798:0 "Kumari 2"
  STATE_799:0 "Manji"
- STATE_800:0 "Nga"
- STATE_801:0 "Nyima"
- STATE_802:0 "Mak"
+ STATE_800:0 "Sonduru"
+ STATE_801:0 "Pantiya 3"
+ STATE_802:0 "Kumari 3"
  STATE_803:0 "Grao"
- STATE_804:0 "Na'ine"
- STATE_805:0 "Krung"
+ STATE_804:0 "Pantiya 1"
+ STATE_805:0 "Portuguese Utura"
  STATE_806:0 "Shu"
- STATE_807:0 "Namu"
+ STATE_807:0 "Utura"
  STATE_808:0 "Myeng"
- STATE_809:0 "Myug"
+ STATE_809:0 "Chola"
  STATE_810:0 "Va'asi"
  STATE_811:0 "Anaga'a"
  STATE_812:0 "Line'e"
@@ -967,8 +967,8 @@
  STATE_966:0 "Takamafrika"
  STATE_967:0 "Zenigal"
  STATE_968:0 "Aurora Islands"
- 
- 
+ STATE_969:0 "Uncategorized Lemuria"
+ STATE_970:0 "Akamatuli"
  
  
  
