Lemuria now stable

--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -967,8 +967,28 @@
  STATE_966:0 "Takamafrika"
  STATE_967:0 "Zenigal"
  STATE_968:0 "Aurora Islands"
- STATE_969:0 "Uncategorized Lemuria"
+ STATE_969:0 "Nacre Islands"
  STATE_970:0 "Akamatuli"
+ STATE_971:0 "Meru Kumari"
+ STATE_972:0 "Aurtura Colony"
+ STATE_973:0 "Lankr"
+ STATE_974:0 "Werreurbro"
+ STATE_975:0 "Free Cities"
+ STATE_976:0 "Free Cities 2"
+ STATE_977:0 "Arcadia"
+ STATE_978:0 "Free Anarchists"
+ STATE_979:0 "North W.U. of L."
+ STATE_980:0 "South W.U. of L."
+ STATE_981:0 "Kalari Kingdom"
+ STATE_982:0 "Lasnova"
+ STATE_983:0 "Suisse Colony"
+ STATE_984:0 "Audenshire"
+ STATE_985:0 "Free Lemuria"
+ STATE_986:0 "Qlach Avengers"
+ STATE_987:0 "Hur Peninsula"
+ STATE_988:0 "Ackerson Desert"
+ STATE_989:0 "East B. Lemuria"
+ STATE_990:0 "Southern Coast"
  
  
  
